Removed filler copy and added new copy to capabilities

--- a/app/views/capabilities/experientialcontent.html.erb
+++ b/app/views/capabilities/experientialcontent.html.erb
@@ -4,13 +4,8 @@
             <div class="container pagize">
             	<div class="row">
                 	<div class="col-md-12 textalignleft capabilitiesinfo">
-
                         <h2>Experiential Content</h2>
-                        <p>Bacon ipsum dolor amet swine prosciutto meatloaf jerky kielbasa cupim. </p>
-
-
-                        <!-- <p>Let us use our expertise to help you develop a technology plan and budget for your new space. We will translate your businesses communications and presentation needs into a simple effective meeting space design. We specialize in developing enterprise wide technology standards. Our technology standards will ensure that each of your business groups have the technology that they need to be efficient regardless which office they are in. </p> -->
-
+                        <p>Break the glass between your customers and your content</p>
                     </div>
             	</div>
             </div>
@@ -25,10 +20,10 @@
                   <div class="row">
                       <div class="col-md-6">
                           <div id="what-we-do"class="text-block about-us textalignleft">
-                            <h1>Kevin pork drumstick</h1>
-                            <p>
-                              Bacon ipsum dolor amet jowl pancetta pork chop salami venison sausage. Cupim boudin brisket pastrami shank burgdoggen short loin pig turducken ham ground round capicola. Kielbasa meatloaf doner, strip steak spare ribs tenderloin shoulder pastrami flank brisket. Sausage short loin meatloaf flank venison prosciutto chicken. Chicken tongue pork chop, shank sausage jerky turkey bacon leberkas turducken capicola cow boudin. Shank landjaeger turkey ham pork ham hock swine salami pork belly.
-                            </p>
+                            <h1>Build Content for Participation,</br> Not Just Consumption</h1>
+                            <p>Let’s face it, marketing has changed. In order to evolve with it, brands are expected to produce an unending stream of high quality content. However, an increase in content also means an increase in the possibility of your content being ignored.</p>
+
+                            <p>We create experiences that cut through the white noise. Through a fusion of marketing-technology, we put your customers first and empower them to co-create brand focused content. When created together with your customers, we unlock the power of word-of-mouth and expand the reach of your content.</p>
                           </div>
                       </div>
                   </div>
