--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -20,7 +20,7 @@
                         <div class="col-md-12">
                             <div class="text-block textaligncenter about-us animated slideInUp">
                                 <h2>Behind the Name</h2>
-                                    <p>Conexus means connected in Latin and also is a play on words, "Connects Us". This really describes how we see ourselves and what we do for our clients. We connect people with people, connect business with the space they occupy and help businesses connect with their customers, either in the same room or over great distances all through technology.</p>
+                                    <p>Conexus means connected in Latin and also is a play on words, “Connects Us”. This really describes how we see ourselves and what we do for our clients. We connect people with people, brands and spaces either in the same room or across the world all through technology.</p>
                             </div>
                         </div>
                     </div>
@@ -51,7 +51,7 @@
                         <div class="col-md-12">
                             <div id="what-we-do"class="text-block about-us textaligncenter wow slideInUp">
                                 <h2>What We Do</h2>
-                                <p>After understanding who you are and how you do business we show our clients which of today’s technologies will provide the most value to your business.</p>
+                                <p>Create environments and experiences that allow for the co-creation of brand focused content.</p>
                             </div>
                         </div>
                     </div>
