--- a/app/views/projects/digitallife14.html.erb
+++ b/app/views/projects/digitallife14.html.erb
@@ -16,7 +16,7 @@
                           </div>
 
                             <div class="text-block textaligncenter slider-info">
-                              <p>Bacon ipsum dolor amet hamburger ham strip steak, rump bresaola pastrami spare ribs picanha nostrud cow. Shoulder esse ut ball tip sirloin in deserunt, ribeye meatloaf adipisicing.</p>
+                              <p>We used some of our magic to create an app that allows customers to tap the buttons on the window cling and activate an audio clip and automation event in the window display to demonstrate the features of Digital Life at AT&T.</p>
                             </div>
 
                             <%= render "projects/backtoprojectsbtn.html.erb" %>
