--- a/app/views/projects/digitallife16.html.erb
+++ b/app/views/projects/digitallife16.html.erb
@@ -16,7 +16,8 @@
                           </div>
 
                             <div class="text-block textaligncenter slider-info">
-                              <p>Bacon ipsum dolor amet hamburger ham strip steak, rump bresaola pastrami spare ribs picanha nostrud cow. Shoulder esse ut ball tip sirloin in deserunt, ribeye meatloaf adipisicing.</p>
+                              <p>This experience creates a simplified version of the AT&T Digital Life experience. It allows customers to educate themselves about Digital Life through audio clips and real time automation of the features. In store, AT&T Experience Guides have utilized the display in their presentations to potential customers.</p>
+                              <p>The user interface is displayed on a touch monitor to emulate the experience of having the digital life app on your tablet at home.</p>
                             </div>
 
                             <%= render "projects/backtoprojectsbtn.html.erb" %>
