--- a/app/views/projects/fwchicago15.html.erb
+++ b/app/views/projects/fwchicago15.html.erb
@@ -16,7 +16,7 @@
                           </div>
 
                             <div class="text-block textaligncenter slider-info">
-                              <p>Bacon ipsum dolor amet hamburger ham strip steak, rump bresaola pastrami spare ribs picanha nostrud cow. Shoulder esse ut ball tip sirloin in deserunt, ribeye meatloaf adipisicing.</p>
+                              <p>In this project we used projection mapping to showcase what the fashion and technology might look like in 2035.</p>
                             </div>
 
                             <%= render "projects/backtoprojectsbtn.html.erb" %>
