--- a/app/views/projects/holiday15.html.erb
+++ b/app/views/projects/holiday15.html.erb
@@ -6,7 +6,7 @@
                     <div class="row">
                         <div class="col-md-12">
                           <div class="text-block textaligncenter">
-                              <h1>AT&T - Holiday Miracles</h1>
+                              <h1>AT&T - Magical Gifts</h1>
                           </div>
                           <div id="owl-slider" class="owl-carousel">
 
@@ -16,7 +16,9 @@
                           </div>
 
                             <div class="text-block textaligncenter slider-info">
-                              <p>Bacon ipsum dolor amet hamburger ham strip steak, rump bresaola pastrami spare ribs picanha nostrud cow. Shoulder esse ut ball tip sirloin in deserunt, ribeye meatloaf adipisicing.</p>
+                              <p>This implementation is powered by #MagicalGifts! Pedestrians are prompted to tweet to @attmichiganave using the specified hashtag leading to the ultimate holiday experience. Sending a tweet brings the window display to life, triggering audio, automated packages opening, and AT&T’s holiday brand element the “sparkle” projected on the sidewalk.</p>
+
+                              <p>After participating, users are tweeted a holiday message from @attmichiganave and a picture of the window display to remember and share their experience.</p>
                             </div>
 
                             <%= render "projects/backtoprojectsbtn.html.erb" %>
