--- a/app/views/projects/vangogh.html.erb
+++ b/app/views/projects/vangogh.html.erb
@@ -16,7 +16,8 @@
                           </div>
 
                             <div class="text-block textaligncenter slider-info">
-                              <p>Bacon ipsum dolor amet hamburger ham strip steak, rump bresaola pastrami spare ribs picanha nostrud cow. Shoulder esse ut ball tip sirloin in deserunt, ribeye meatloaf adipisicing.</p>
+                              <p>This project was a part of a joint marketing effort by the Art Institute of Chicago and the Magnificent Mile Association to promote the exhibit where all 3 Van Gogh bedroom paintings would be shown in the same place for the first time since Van Gogh was alive.</p>
+                              <p>As customers approach the window display they see a life-size replica of Van Gogh’s bedroom. Each element of the bedroom is lit from below by color changing led lights. In front of the painting is a line of tablets displaying a solid color background and simple instructions to swipe down to change colors of each element in the vignette. Our application as if by magic, changes the color of the light shown on each element by customers simply swiping up and down on window in front of each tablet. This allows the customers to do their own “experiments in color” on the canvas of the famous painting.</p>
                             </div>
 
                             <%= render "projects/backtoprojectsbtn.html.erb" %>
