--- a/app/views/welcome/_story.html.erb
+++ b/app/views/welcome/_story.html.erb
@@ -11,8 +11,8 @@
                             Conexus Technology is a start-up based in Charlotte, NC that specializes in creating environments where your customers can experience content in new ways. Through immersive experiences, we use technology to integrate your customers into the real-time creation of brand focused content.
                           </p>
                           </div>
-                          <div class="textaligncenter fade_in animate">
-                          <%=link_to "Learn More", capabilities_immersive_experience_design_path, :class => "button-main" %>
+                          <div class="textaligncenter">
+                          <%=link_to "Learn More", capabilities_experiential_content_path, :class => "button-main" %>
                           </div>
                       </div>
                   </div>
