--- a/app/views/capabilities/controlsystemprogramming.html.erb
+++ b/app/views/capabilities/controlsystemprogramming.html.erb
@@ -7,7 +7,7 @@
 
                         <h2>Control System Programming</h2>
 
-                        <p>Having the correct technology in your meeting space is important, however having a user friendly controls is what really makes the space functional. We have developed a simple yet powerful user interface that takes the all the guess work out of setting up a meeting.</p>
+                        <p>Whether your meeting includes a video call, audio conference or a presentations any function in the room is perfectly configured every time with the press of an icon. </p>
 
                     </div>
             	</div>
@@ -22,9 +22,9 @@
                   <div class="row">
                       <div class="col-md-6">
                           <div id="what-we-do"class="text-block about-us textalignleft">
-                            <h1>Kevin pork drumstick</h1>
+                            <h1>No Meetings Out of Your Control</h1>
                             <p>
-                              Bacon ipsum dolor amet jowl pancetta pork chop salami venison sausage. Cupim boudin brisket pastrami shank burgdoggen short loin pig turducken ham ground round capicola. Kielbasa meatloaf doner, strip steak spare ribs tenderloin shoulder pastrami flank brisket. Sausage short loin meatloaf flank venison prosciutto chicken. Chicken tongue pork chop, shank sausage jerky turkey bacon leberkas turducken capicola cow boudin. Shank landjaeger turkey ham pork ham hock swine salami pork belly.
+                              Having the correct technology in your meeting space is important, however having a user friendly controls is what really makes the space functional. We have developed a simple yet powerful user interface that takes all the guess work out of setting up a meeting.
                             </p>
                           </div>
                       </div>
