--- a/app/views/capabilities/experientialcontent.html.erb
+++ b/app/views/capabilities/experientialcontent.html.erb
@@ -13,7 +13,11 @@
 </section>
 
 
-<section class="main-content default-padding shadow-off">
+    <%= render "capabilities/capabilitynav"  %>
+
+
+
+<section class="main-content margin-50 small-padding shadow-off">
       <div class="container">
           <div class="row">
               <div class="col-md-12">
