--- a/app/views/capabilities/immersiveexperiencedesign.html.erb
+++ b/app/views/capabilities/immersiveexperiencedesign.html.erb
@@ -14,8 +14,10 @@
             </div>
         </div>
 </section>
+<%= render "capabilities/capabilitynav"  %>
 
-<section class="main-content default-padding shadow-off">
+
+<section class="main-content margin-50 small-padding shadow-off">
       <div class="container">
           <div class="row">
               <div class="col-md-12">
