--- a/app/views/casein/blogs/_form.html.erb
+++ b/app/views/casein/blogs/_form.html.erb
@@ -13,8 +13,8 @@
 
 <div class="row">
 	<div class="col-lg-12">
-		<label>Body</label>
-		<%= cktext_area :blog, :entry, :ckeditor => {:height => '800px', :uiColor => '#f1f1f1',:toolbar => 'conexus', :extraAllowedContent => 'iframe[*]'} %>
+		<%= casein_text_area f, f.object, :entry, :as => :ckeditor, input_html: {:ckeditor => {:toolbar => 'conexus'}} %>
+		<!-- <%= cktext_area :blog, :entry, :ckeditor => {:height => '800px', :uiColor => '#f1f1f1',:toolbar => 'conexus', :extraAllowedContent => 'iframe[*]'} %> -->
 	</div>
 </div>
 
