--- a/app/views/projects/fwchicago15.html.erb
+++ b/app/views/projects/fwchicago15.html.erb
@@ -10,9 +10,11 @@
                           </div>
                           <div id="owl-slider" class="owl-carousel">
 
-                            <div class="owl-item"><img src="http://placehold.it/1170x500/42bdc2/FFFFFF"></div>
+                            <div class="owl-item"><%= image_tag "projects/fw15/owl_fw15_1.jpg" %></div>
+                            <div class="owl-item"><%= image_tag "projects/fw15/owl_fw15_2.jpg" %></div>
+                            <div class="owl-item"><%= image_tag "projects/fw15/owl_fw15_3.jpg" %></div>
+                            <div class="owl-item"><%= image_tag "projects/fw15/owl_fw15_4.jpg" %></div>
 
-                            <div class="owl-item"><img src="http://placehold.it/1170x500/42bdc2/FFFFFF"></div>
                           </div>
 
                             <div class="text-block textaligncenter slider-info">
