Added animations to capabilities pages and cleaned up stylesheets

--- a/app/assets/stylesheets/capabilities.scss
+++ b/app/assets/stylesheets/capabilities.scss
@@ -3,18 +3,12 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 @import "brandcolors";
-// .image-list {
-//   // list-style: none;
-//   margin: 0;
-//   padding: 0;
-// }
-// .image-list * {
-//   padding: 0.3rem;
-// }
-//
-// .image-list img {
-//   display: block;
-// }
+
+.capabilitiesinfo {
+    color: $white;
+    font-size: 1.3rem;
+    line-height: 2rem;
+}
 
 .horizontal {
   height: 80%;
@@ -37,7 +31,6 @@
 .horizontal li {
   a {
     font-size: 1.2rem;
-
   }
   a:hover,
   a:active,
@@ -46,17 +39,12 @@
     padding-bottom: 30px;
     border-bottom: 10px solid $conexusgreen;
   }
-
-
 }
-//
-// .horizontal img {
-//   width: auto;
-//   height: 100%;
-// }
-//
-#capabilities-menu {
-  // width: 80%;
-  background-color: $white;
 
+#capabilities-menu {
+  background-color: $white;
+}
+
+.capabilities_feature_img img{
+  width: 100%;
 }
