--- a/app/assets/stylesheets/welcome.scss.erb
+++ b/app/assets/stylesheets/welcome.scss.erb
@@ -101,8 +101,6 @@
   font-weight: 600;
 }
 
-
-
 .seperator {
 position: relative;
 display: block;
@@ -119,3 +117,69 @@ margin: 10px 0;
 #home-contact-section{
   -webkit-animation-duration: 1.5s;
 }
+
+
+/************************************ Media Queries */
+
+
+@media screen and (-webkit-min-device-pixel-ratio: 1.5), screen and (-moz-min-device-pixel-ratio: 1.5), screen and (min-device-pixel-ratio: 1.5) {
+    .lob-nav {
+      background-color: $conexusgreen;
+      }
+}
+
+@media (min-width: 1396px) {
+  .lob-nav {
+    background-color: $conexusgreen;
+    background-position: 15px bottom; }
+
+
+
+  }
+
+@media (min-width: 768px) {
+  .lob-nav {
+    padding-left: 0 !important;
+    padding-right: 0 !important; } }
+
+@media (min-width: 992px) {
+  .lob-nav ul {
+    width: 100%;
+    margin: 0; }
+
+     #swipe-nav{
+  width: 875px;
+  margin-right: auto;
+  margin-left: auto;
+  }
+
+
+  }
+
+@media (max-width: 991px) {
+  .lob-nav ul {
+    width: 100%;
+    margin: 0; } }
+
+@media (max-width: 767px) {
+  .lob-nav {
+    position: relative; }
+  #swipe-nav {
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch; }
+    #swipe-nav ul {
+      min-width: 545px;
+      padding: 0; }
+  .slide-dir {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    background-repeat: no-repeat; }
+    .slide-dir.slide-left {
+      left: 0;
+      background-position: 50% 50%;
+      background-image: url(<%= asset_path "pagination_prev_white.png" %>); }
+    .slide-dir.slide-right {
+      right: 0;
+      background-position: 50% 50%;
+      background-image: url(<%= asset_path "pagination_next_white.png" %>); } }
