--- a/app/views/capabilities/experientialcontent.html.erb
+++ b/app/views/capabilities/experientialcontent.html.erb
@@ -22,14 +22,20 @@
           <div class="row">
               <div class="col-md-12">
                   <div class="row">
-                      <div class="col-md-6">
+                      <div class="col-md-12">
                           <div id="what-we-do"class="text-block about-us textalignleft">
-                            <h1>Build Content for Participation,</br> Not Just Consumption</h1>
-                            <p>Let’s face it, marketing has changed. In order to evolve with it, brands are expected to produce an unending stream of high quality content. However, an increase in content also means an increase in the possibility of your content being ignored.</p>
+                            <h1 class="wow slideInLeft">Build Content for Participation, Not Just Consumption</h1>
+                            <p class="wow slideInUp">Let’s face it, marketing has changed. In order to evolve with it, brands are expected to produce an unending stream of high quality content. However, an increase in content also means an increase in the possibility of your content being ignored.</br>We create experiences that cut through the white noise. Through a fusion of marketing-technology, we put your customers first and empower them to co-create brand focused content. When created together with your customers, we unlock the power of word-of-mouth and expand the reach of your content.</p>
 
-                            <p>We create experiences that cut through the white noise. Through a fusion of marketing-technology, we put your customers first and empower them to co-create brand focused content. When created together with your customers, we unlock the power of word-of-mouth and expand the reach of your content.</p>
+
                           </div>
                       </div>
+
+                      <!-- <div class ="col-md-6">
+                          <div class="text-block">
+
+                          </div>
+                      </div> -->
                   </div>
 
               </div>
