--- a/app/views/capabilities/immersiveexperiencedesign.html.erb
+++ b/app/views/capabilities/immersiveexperiencedesign.html.erb
@@ -22,18 +22,15 @@
           <div class="row">
               <div class="col-md-12">
                   <div class="row">
-                      <div class="col-md-6">
+                      <div class="col-md-12">
                           <div class="text-block about-us textalignleft">
-                            <h1>Driving Customer Engagement</h1>
-                            <p>
+                            <h1 class="wow slideInLeft">Driving Customer Engagement</h1>
+                            <p class="wow slideInUp">
                             Our implementations invite passive customers to engage in our experiences with simple entry points such as gestures, mobile notifications and Bluetooth. They also include cutting edge technology such as augmented reality, voice interactions, gestures triggered content and experiences.
                             </p>
                           </div>
                       </div>
-                      <div class="col-md-6">
 
-
-                      </div>
                   </div>
               </div>
           </div>
