--- a/app/views/capabilities/controlsystemprogramming.html.erb
+++ b/app/views/capabilities/controlsystemprogramming.html.erb
@@ -24,11 +24,15 @@
                   <div class="row">
                       <div class="col-md-6">
                           <div id="what-we-do"class="text-block about-us textalignleft">
-                            <h1>No Meetings Out of Your Control</h1>
-                            <p>
+                            <h1 class="wow slideInLeft">No Meetings Out of Your Control</h1>
+                            <p class="wow slideInUp">
                               Having the correct technology in your meeting space is important, however having a user friendly controls is what really makes the space functional. We have developed a simple yet powerful user interface that takes all the guess work out of setting up a meeting.
                             </p>
                           </div>
+                      </div>
+
+                      <div class="col-md-6 capabilities_feature_img">
+                        <%= image_tag "control-systems.jpg" %>
                       </div>
                   </div>
 
