--- a/app/views/capabilities/socialinteraction.html.erb
+++ b/app/views/capabilities/socialinteraction.html.erb
@@ -23,8 +23,8 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div id="what-we-do"class="text-block about-us textalignleft">
-                              <h1>Empowering Your Customers</h1>
-                              <p>
+                              <h1 class="wow slideInLeft">Empowering Your Customers</h1>
+                              <p class="wow slideInUp">
                                 There is a great cost that has traditionally accompanied high quality content, we develop solutions to lower that cost. Our experiences empower your customers to create brand focused and high quality content with their own devices. This focused content creates social conversations centered around your brand.
                               </p>
                             </div>
